<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aistrong.voice.MainLogin">

    <ImageView
        android:id="@+id/login_user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/image_user"
        android:contentDescription="@string/user_image" />

    <TextView
        android:id="@+id/userIDText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_user_image"
        android:layout_marginTop="50dp"
        android:text="@string/login_tip"
        android:padding="20dp"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/userID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userIDText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/login_id"
        android:inputType="text"
        android:labelFor="@+id/userID"
        android:padding="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/userID">

        <CheckBox
            android:id="@+id/rem_userID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true"
            android:layout_gravity="start"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_toEndOf="@id/rem_userID"
            android:layout_toStartOf="@id/loginBtn"
            android:text="@string/rem_id"
            android:textSize="18sp"/>

        <ImageButton
            android:id="@+id/loginBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/send_btn"
            android:src="@drawable/login" />

    </RelativeLayout>

</RelativeLayout>